<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/gray"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_character"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            android:src="@drawable/rick_sanchez" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rickk_sanchez"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/color_indicator"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/color_indicator_all"
                    android:src="@drawable/ic_circle_red" />

                <TextView
                    android:id="@+id/character_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alive_human"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_known_location"
                android:textColor="@color/dark_white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/citadel_of_ricks"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/first_seen_in"
                android:textColor="@color/dark_white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_first_seen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilot"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>