<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.character_details.CharactersDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/character_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:src="@drawable/rick_sanchez" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_material1"
                style="@style/CustomCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#272b33"
                android:padding="30dp"
                app:cardElevation="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp">

                    <TextView
                        android:id="@+id/character_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rick_sanchez"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alive_human"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/character_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/dark_white"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/character_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_known_location"
                        android:textColor="@color/dark_white"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/citadel_of_ricks"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <com.skydoves.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:expandable_duration="300"
                        app:expandable_isExpanded="false"
                        app:expandable_parentLayout="@layout/expandable_parent"
                        app:expandable_secondLayout="@layout/expandable_detail_character_info" />

                    <com.skydoves.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:expandable_duration="300"
                        app:expandable_isExpanded="false"
                        app:expandable_parentLayout="@layout/expandable_parent"
                        app:expandable_secondLayout="@layout/expandable_detail_origin" />

                    <com.skydoves.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:expandable_duration="300"
                        app:expandable_isExpanded="false"
                        app:expandable_parentLayout="@layout/expandable_parent"
                        app:expandable_secondLayout="@layout/expandable_detail_first_seen" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
